src/objects/BMCServiceDesk__User_Account_Link__c.object
<CustomObject>
    <description>This object allows you to store data linking between users and accounts.This is a singleton relation i.e.between a user and account only one relation can exist in this junction object.</description>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Account Links</relationshipLabel>
        <relationshipName>User_Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>User Account Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKAccount__c</columns>
        <columns>BMCServiceDesk__FKUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Account Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>